--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,5 +1,5 @@
 html {
-  background: ##F0F0F0;
+  background: #F0F0F0;
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
